--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@prisma/client": "^4.12.0",
     "axios": "^1.6.1",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
     "googleapis": "^128.0.0",
     "prisma": "^4.12.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winattr": "^3.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
