--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/platform-express": "^9.4.3",
     "@prisma/client": "^4.12.0",
     "axios": "^1.6.1",
+    "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
     "googleapis": "^128.0.0",
+    "nodemailer": "^6.9.13",
     "prisma": "^4.12.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
