--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
     "googleapis": "^128.0.0",
+    "https-localhost": "^4.7.1",
     "nodemailer": "^6.9.13",
     "prisma": "^4.12.0",
     "reflect-metadata": "^0.1.13",
@@ -46,7 +47,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/multer": "^1.4.10",
-    "@types/node": "^16.0.0",
+    "@types/node": "^16.18.101",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
